<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:clickable="true"
    app:cardCornerRadius="15dp"
    app:cardElevation="20dp"
    android:focusable="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="fill_horizontal"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/fixture_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:hint="@string/fixture_name"/>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:gravity="center"
                android:orientation="vertical">
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="7dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="5dp">
                    <ImageView
                        android:id="@+id/team1"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:maxHeight="150dp"
                        android:minHeight="130dp"
                        android:layout_gravity="center_horizontal"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/image_view"
                        android:elevation="20dp"
                        tools:src="@tools:sample/backgrounds/scenic" />
                </androidx.cardview.widget.CardView>
                <TextView
                    android:id="@+id/team1_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:hint="@string/team_name" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/team1_run"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/team1_over"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/card_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/match_vs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="VS"
                        android:textSize="18sp"
                        android:textStyle="bold|italic"/>

                    <TextView
                        android:id="@+id/fixture_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:hint="@string/status"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:layout_marginTop="5dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/team2_run"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/team2_over"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:gravity="center"
                android:orientation="vertical">
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="7dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="5dp">
                    <ImageView
                        android:id="@+id/team2"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:maxHeight="150dp"
                        android:minHeight="130dp"
                        android:layout_gravity="center_horizontal"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/image_view"
                        android:elevation="20dp"
                        tools:src="@tools:sample/backgrounds/scenic" />
                </androidx.cardview.widget.CardView>
                <TextView
                    android:id="@+id/team2_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:hint="@string/team_name" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/fixture_note_venue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:hint="@string/fixture_note"/>

    </LinearLayout>


</androidx.cardview.widget.CardView>
